--- a/style.css
+++ b/style.css
@@ -281,7 +281,7 @@ footer
     padding: 10px;
 }
 
-@media screen and (max-widht: 600px) {
+@media screen and (max-width: 600px) {
     
     nav ul li a
     {
@@ -315,7 +315,7 @@ footer
     {
         width: 90%;
         padding-left: 2rem;
-        font-size: 13pt;
+        font-size: 12pt;
     }
 
     .sosmed
@@ -328,4 +328,6 @@ footer
     {
         width: 10%;
     }
+
+    
 }
