--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 {
     --blue : #2C2546;
     --dark-blue : #1B1535;
-    --green : #00EB09;
+    --green :crimson;
     --white : #fff;
 }
 
@@ -13,12 +13,12 @@
     list-style-type: none;
     text-decoration: none;
     box-sizing: border-box;
-    font-family: 'Tahoma';
+    font-family: 'Eastwood';
 }
 
 body
 {
-    background-color: var(--dark-blue);
+    background-color: lightslategray;
     color: var(--white);
 }
 
@@ -33,15 +33,33 @@ header
     font-size: 15pt;
     justify-content: center;
     text-align: center;
-    background-color: var(--blue);  
+    background-color: #222;  
     z-index: 999;
+    padding-bottom: 5px;
+    padding-top: 10px;
 }
 
-.title
+.brand
 {
-    color: var(--green);
-    font-size: 15pt;
-    border-bottom: 1px solid var(--white);
+    display: flex;
+    flex-direction: row;
+    color: crimson;
+    justify-content:center;
+    text-transform: capitalize;
+    
+}
+
+.firstname 
+{
+    color: #fff;
+    font-weight: 700;
+}
+
+.lastname
+{
+    color: crimson;
+    font-weight: 400;
+    padding-left: 4px;
 }
 
 .search-input
@@ -81,12 +99,20 @@ nav ul li a
 
 nav ul li a:hover
 {
-    border-bottom: 1px solid var(--white);
+    color: #fff;
+   transition: all .3s ease-in-out;
 }
 
 li.active a
 {
     border-bottom: 2px solid var(--white);
+}
+
+nav ul li img
+{
+    width: 30px;
+    height: 30px;
+    border-radius: 40px;
 }
 
 .menu
@@ -106,7 +132,7 @@ li.active a
 
 .swiper
 {
-    width: 80%;
+    width: 60%;
     height: fit-content;
 }
 
